--- a/aliases/ansible.yaml
+++ b/aliases/ansible.yaml
@@ -1,8 +1,8 @@
 # refers to `ansible` st2 integration pack:
 # https://github.com/StackStorm/st2contrib/tree/master/packs/ansible
 ---
-name: "chatops.ansible_local"
-action_ref: "ansible.command_local"
-description: "Run ansible command on local machine"
+name: "chatops.ansible"
+action_ref: "ansible.command"
+description: "Run ansible command"
 formats:
   - "ansible {{args}}"
